<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.accountinglib</groupId>
    <artifactId>accountinglib-ai</artifactId>
    <version>0.9.0</version>
    <packaging>jar</packaging>

    <name>The Accounting Library - ai</name>
    <description>
        The Accounting Library (accountinglib) is an open source library for accounting in Java.
    </description>
    <url>https://github.com/accountinglib/accountinglib</url>

    <licenses>
        <license>
            <name>GNU Lesser General Public License v2.1</name>
            <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>


    <scm>
        <url>https://github.com/accountinglib/accountinglib</url>
        <connection>scm:git:git://github.com/accountinglib/accountinglib.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/accountinglib/accountinglib.git</developerConnection>
        <tag>HEAD</tag>
    </scm>


    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <slf4j.version>2.0.17</slf4j.version>
        <logback.version>1.5.18</logback.version>
        <jlama.version>0.8.4</jlama.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>com.github.accountinglib</groupId>
            <artifactId>accountinglib</artifactId>
            <version>0.9.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.tjake</groupId>
            <artifactId>jlama-core</artifactId>
            <version>${jlama.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.tjake</groupId>
            <artifactId>jlama-native</artifactId>
            <!-- supports linux-x86_64, macos-x86_64/aarch_64, windows-x86_64
                 Use https://github.com/trustin/os-maven-plugin to detect os and arch -->
            <classifier>${os.detected.name}-${os.detected.arch}</classifier>
            <version>${jlama.version}</version>
        </dependency>

    </dependencies>


    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
